<resources>
    <string name="app_name">Locator</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="logout">logout</string>
    <string name="profileupdate">profile update</string>
    <string name="select_img">select image</string>
    <string name="upload_img">upload image</string>
    <string name="update">Update</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mobile">Mobile Number</string>
</resources>